[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.43", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
