[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.43", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
