[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
clap = { version = "4.5.43", features = ["derive"] }
eyre = "0.6.12"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = { version = "0.1.41", features = ["attributes"] }
